spacing fixed

--- a/css/haktan css/haktan.css
+++ b/css/haktan css/haktan.css
@@ -260,7 +260,7 @@ h4 {
     height: 350px;
 }
 
-.row {
+.row-service {
     padding: 5rem;
 }
 
